# parse_this

./: .gitignore  .landscape.yaml  .mypy.ini  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  parse_this.py  parse_this_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_all.sh
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/plans/: annotated-validation.md  argument-aliases.md  callable-defaults.md  confirm-prompt.md  document-log-level.md  enum-type-support.md  env-var-fallback.md  extract-parsing-helpers.md  handle-file-arguments.md  handle-list-tuple-arguments.md  literal-type-support.md  modernize-ci-cd.md  modernize-claude-settings.md  modernize-codebase.md  modernize-tooling-and-ci.md  path-file-types.md  repo-quality-improvements.md  shell-completion.md  subcommand-parse-error-shows-top-parser-usage.md  tier-2-signature-and-test-gaps.md  version-flag.md
.claude/scripts/: run-related-tests.sh
.claude/skills/implement-plan/: SKILL.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  pr-pre-submit-queue.yml  publish-package-to-pypi.yml  python-package.yml
parse_this/: __init__.py  args.py  call.py  core.py  decorators.py  helpers.py  parsers.py  parsing.py  type_check.py  types.py  values.py
parse_this/exception/: __init__.py
parse_this/help/: action.py  description.py
test/: args_test.py  call_test.py  core_test.py  help_test.py  helpers.py  literal_test.py  parse_this_test.py  parsers_test.py  parsing_test.py  types_test.py  utils.py
(+1 files in other folders)
