[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parse_this"
version = "4.0.7"
description = "Makes it easy to create a command line interface for any function, method or classmethod.."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bertrand Vidal", email = "vidal.bertrand@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/bertrandvidal/parse_this"
Download = "https://pypi.python.org/pypi/parse_this"

[tool.setuptools.packages.find]
include = ["parse_this*"]

[tool.setuptools.package-data]
parse_this = ["py.typed"]

[tool.mypy]
no_strict_optional = true
show_error_codes = true

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
addopts = "--cov=parse_this --cov-fail-under=99 --no-cov-on-fail"
testpaths = ["test"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-ignore = ["E203"]
